# sub-swap

./: CLAUDE.md  Cargo.toml  Cross.toml  HEALTH.md  README.md  clippy.toml  justfile
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-code-quality-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEW-FIX.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-architectural-enforcement/: 02-01-PLAN.md  02-01-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-documentation-knowledge-base/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-agent-entry-point/: 04-01-PLAN.md  04-01-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: ARCHITECTURE.md  SECURITY.md  TESTING.md
docs/decisions/: 001-aes-256-gcm.md  002-os-keychain.md  003-path-injection.md  004-offline-only.md
docs/superpowers/plans/: 2026-04-02-sub-swap.md
docs/superpowers/specs/: 2026-04-02-sub-swap-design.md  2026-04-09-cross-platform-key-storage-design.md
src/: cli.rs  config.rs  error.rs  guard.rs  key.rs  lib.rs  main.rs  paths.rs
src/crypto/: keychain.rs  mod.rs  passphrase.rs
src/profile/: mod.rs  store.rs  switch.rs
src/tui/: mod.rs  widgets.rs  wizard.rs
tests/: arch.rs  integration.rs
