[package]
name = "sub-swap"
version = "0.1.0"
edition = "2021"
description = "Manage multiple ~/.codex/ profiles with encryption at rest"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
aes-gcm = "0.10.3"
rand = "0.10.0"
keyring = "3.6.3"
sysinfo = "0.38.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Intentional suppressions per D-01 allow-list
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
return_self_not_must_use = "allow"
